--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -19,10 +19,27 @@ collections:
       - { label: 'Page-Name-with-dashes-only', name: 'pageName', widget: 'string' }
       - { label: 'Blog Title', name: 'blogTitle', widget: 'string' }
       - { label: 'Title Tag', name: 'titleTag', widget: 'string' }
-      - { label: 'Description', name: 'blogDescription', widget: 'string' }
+      - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Author', name: 'author', widget: 'string' }
       - { label: 'Date', name: 'date', widget: 'datetime' }
-      - { label: 'Tags', name: 'tags', widget: 'list', default: ['post'] }
+      - { label: 'Tags', name: 'tags', widget: 'list', default: ['blogpost'] }
+      - { label: 'Featured Image', name: 'image', widget: 'image' }
+      - { label: 'Image Caption', name: 'imageAlt', widget: 'string' }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
+
+  - name: 'events'
+    label: 'Events'
+    folder: 'src/events'
+    create: true
+    slug: '{{pageName}}'
+    fields:
+      - { label: 'Page-Name-with-dashes-only', name: 'pageName', widget: 'string' }
+      - { label: 'Event Title', name: 'eventTitle', widget: 'string' }
+      - { label: 'Title Tag', name: 'titleTag', widget: 'string' }
+      - { label: 'Description', name: 'description', widget: 'string' }
+      - { label: 'Author', name: 'author', widget: 'string' }
+      - { label: 'Date', name: 'date', widget: 'datetime' }
+      - { label: 'Tags', name: 'tags', widget: 'list', default: ['eventpost'] }
       - { label: 'Featured Image', name: 'image', widget: 'image' }
       - { label: 'Image Caption', name: 'imageAlt', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
