--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@11ty/eleventy-navigation": "^0.3.5"
   },
   "dependencies": {
-    "@11ty/eleventy-img": "^2.0.1"
+    "@11ty/eleventy-img": "^2.0.1",
+    "dotenv": "^16.0.3",
+    "node-fetch": "^2.6.9"
   }
 }
